--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -6959,7 +6959,7 @@ a.list-group-item-danger.active:focus {
 html,
 body {
   font-family: 'Titillium Web', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   color: fff;
   cursor: default; }
 
@@ -7066,12 +7066,13 @@ html, body {
   bottom: 0;
   right: 0;
   height: 20%;
-  width: 380px;
+  width: 420px;
   max-width: 30%;
   padding: 4px;
   background-color: rgba(9, 9, 9, 0.7);
   color: #fff;
-  overflow-y: auto; }
+  overflow-y: auto;
+  font-size: 0.8em; }
 
 /* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
 .page-index .container-fluid,
@@ -7182,14 +7183,17 @@ html, body {
       max-height: 100%;
       position: relative;
       top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%); }
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
     .page-play #video-container.cinemaOn {
       width: 100%; }
       .page-play #video-container.cinemaOn #video-player {
         max-width: 100%;
         width: 100%; }
+    .page-play #video-container.cinemaOff #video-player {
+      height: 100%; }
   .page-play #overlay {
     position: absolute;
     top: 0;
@@ -7231,7 +7235,7 @@ html, body {
     .page-play #text-container #text-dialog {
       padding: 40px;
       min-width: 70%;
-      width: calc(100% - 380px);
+      width: calc(100% - 420px);
       font-size: 2em;
       text-align: center;
       color: #fff;
@@ -7289,7 +7293,7 @@ html, body {
     top: 0;
     z-index: 200;
     height: 100%;
-    width: 380px;
+    width: 420px;
     max-width: 30%;
     background-color: rgba(9, 9, 9, 0.7);
     padding: 0;
@@ -7408,7 +7412,7 @@ html, body {
 
 @media all and (max-width: 1279px) {
   html, body {
-    font-size: 14px; }
+    font-size: 16px; }
   .ttexp-btn span {
     font-size: 28px; }
   #customer-logo {
@@ -7434,13 +7438,15 @@ html, body {
 
 @media all and (max-width: 1023px) {
   html, body {
-    font-size: 12px; }
+    font-size: 13px; }
   .ttexp-btn span {
     font-size: 18px; }
   #customer-logo {
     bottom: 18px;
     left: 18px;
     width: 64px; }
+  .page-application #main-content {
+    margin-top: 30px; }
   .page-play #side-chat {
     padding-top: 54px; }
     .page-play #side-chat #chat-options li {
