--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -367,10 +367,8 @@ html, body {
           text-align: justify;
           text-justify: inter-word;
           color: #ffffff; }
-          .page-play #side-chat #chat-options li a:hover {
-            /* 						text-shadow: 0px 0px 4px rgba(194, 27, 23, 1); */ }
           .page-play #side-chat #chat-options li a:active {
-            color: #ffaa44; }
+            text-shadow: 0px 0px 4px #c21b17; }
   .page-play #side-chat.minimized {
     width: 64px; }
     .page-play #side-chat.minimized #chat-options,
@@ -9145,11 +9143,14 @@ button.close {
 
 .table,
 .table a,
-.table a:visited {
-  color: inherit; }
+.table a:visited,
+.table a:focus,
+.table a:hover,
+.table a:active {
+  color: #333333 !important; }
 
 .table-striped > tbody > tr:nth-child(2n+1) {
-  color: inherit; }
+  color: #333333; }
 
 .btn-link:hover,
 .btn-link:focus {
@@ -9185,9 +9186,8 @@ a:visited {
   a:hover,
   a:visited:focus,
   a:visited:hover {
-    color: #ffffff;
-    text-shadow: 0px 0px 4px #c21b17; }
+    color: #ffffff; }
   .btn:active,
   a:active,
   a:visited:active {
-    color: #ffaa44; }
+    text-shadow: 0px 0px 4px #c21b17; }
