--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -81,7 +81,7 @@ body {
 
 .ttexp-position-absolute {
   position: absolute;
-  z-index: 1000; }
+  z-index: 2000; }
   .ttexp-position-absolute.top-left {
     top: 0px;
     left: 0px; }
@@ -135,8 +135,16 @@ html, body {
     border-radius: 0;
     border-width: 1px 0;
     text-align: center; }
+  .page-application #main-menu #app-version {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 5px 10px;
+    color: #fff;
+    font-size: 75%; }
 
 .page-application #logo-app {
+  text-align: center;
   margin-top: 10px; }
 
 .page-application #customer-logo {
@@ -162,7 +170,7 @@ html, body {
   background-color: rgba(9, 9, 9, 0.7);
   color: #fff;
   overflow-y: auto;
-  font-size: 0.8em;
+  font-size: 0.7em;
   -webkit-touch-callout: text;
   /* iOS Safari */
   -webkit-user-select: text;
@@ -186,11 +194,11 @@ html, body {
   margin-left: 25%; }
 
 .page-index #main-content {
-  margin: 60px 0 0 5px;
-  height: 530px; }
+  margin: 60px 0 0 5px; }
   .page-index #main-content .panel-body {
-    padding-left: 0;
-    padding-right: 0; }
+    padding: 10px;
+    text-align: justify;
+    text-justify: inter-word; }
 
 /* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
 .page-scenarios .container-fluid,
@@ -242,20 +250,31 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-y: auto;
     background-color: #6F7072;
-    z-index: 10000;
+    z-index: 1500;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     transform-style: preserve-3d; }
-    .page-play #overlay #overlay-button {
+    .page-play #overlay #overlay-content {
       position: relative;
       top: 50%;
       -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
-      text-align: center; }
-      .page-play #overlay #overlay-button a {
-        font-size: 2em; }
+      padding: 10% 20%; }
+      .page-play #overlay #overlay-content #overlay-description {
+        color: #fff;
+        text-align: justify;
+        text-justify: inter-word;
+        font-size: 125%; }
+      .page-play #overlay #overlay-content #overlay-button {
+        text-align: center;
+        margin: 40px 0 20px 0; }
+        .page-play #overlay #overlay-content #overlay-button a {
+          padding-left: 40px;
+          padding-right: 40px;
+          font-size: 200%; }
   .page-play #text-container {
     overflow: hidden;
     width: 100%;
@@ -367,8 +386,16 @@ html, body {
           text-align: justify;
           text-justify: inter-word;
           color: #ffffff; }
-          .page-play #side-chat #chat-options li a:active {
-            text-shadow: 0px 0px 4px #c21b17; }
+        .page-play #side-chat #chat-options li .loading-icon {
+          position: absolute;
+          left: -1.4em;
+          top: calc(50% - 0.5em);
+          color: #ffffff;
+          display: none; }
+        .page-play #side-chat #chat-options li.loading a {
+          opacity: 1; }
+        .page-play #side-chat #chat-options li.loading .loading-icon {
+          display: inline-block; }
   .page-play #side-chat.minimized {
     width: 64px; }
     .page-play #side-chat.minimized #chat-options,
@@ -411,24 +438,36 @@ html, body {
         padding-left: 0;
         padding-right: 0; }
       .page-scores #scores-container #main-content #general-score-container,
-      .page-scores #scores-container #main-content #objectives-container {
+      .page-scores #scores-container #main-content #objective-container,
+      .page-scores #scores-container #main-content #hint-container {
         margin: 20px 40px;
-        height: 180px;
         padding: 20px;
+        font-size: 200%;
         background-color: #C21B17;
         color: #ffffff; }
-      .page-scores #scores-container #main-content #general-score-container {
+      .page-scores #scores-container #main-content #general-score-container,
+      .page-scores #scores-container #main-content #objective-container {
+        height: 160px;
         margin-right: 10px;
-        font-size: 2.4em;
         text-align: center;
         vertical-align: middle; }
-      .page-scores #scores-container #main-content #objectives-container {
+      .page-scores #scores-container #main-content #hint-container {
+        height: 340px;
         margin-left: 10px;
-        font-size: 2.4em;
-        text-align: center;
-        vertical-align: middle; }
+        text-align: center; }
+        .page-scores #scores-container #main-content #hint-container #hint-text {
+          height: 220px;
+          margin-top: 20px;
+          padding-left: 10px;
+          padding-right: 10px;
+          overflow-y: auto;
+          text-align: left;
+          font-size: 60%;
+          text-align: justify;
+          text-justify: inter-word; }
       .page-scores #scores-container #main-content #variables-score-container {
         margin: 20px 40px;
+        font-size: 100%;
         background-color: #C21B17;
         color: #ffffff; }
         .page-scores #scores-container #main-content #variables-score-container table {
@@ -3015,10 +3054,10 @@ select[multiple].input-lg {
   background-image: none;
   border: 1px solid transparent;
   white-space: nowrap;
-  padding: 8px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  border-radius: 4px;
+  padding: 0;
+  font-size: inherit;
+  line-height: inherit;
+  border-radius: 0;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -9178,16 +9217,26 @@ h6,
 
 .btn,
 a,
-a:visited {
+a:visited,
+a:hover {
   text-decoration: none;
   color: #ffffff; }
   .btn:focus, .btn:hover,
   a:focus,
   a:hover,
   a:visited:focus,
-  a:visited:hover {
+  a:visited:hover,
+  a:hover:focus,
+  a:hover:hover {
     color: #ffffff; }
-  .btn:active,
-  a:active,
-  a:visited:active {
+  .btn[href]:active:not(.disabled),
+  a[href]:active:not(.disabled),
+  a:visited[href]:active:not(.disabled),
+  a:hover[href]:active:not(.disabled) {
     text-shadow: 0px 0px 4px #c21b17; }
+  .btn.disabled,
+  a.disabled,
+  a:visited.disabled,
+  a:hover.disabled {
+    text-decoration: none;
+    opacity: 0.65; }
